--- a/src/main/resources/static/createUser.html
+++ b/src/main/resources/static/createUser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>图片分享-登录</title>
+    <title>图片分享-注册</title>
     <script src="./jQuery/jquery-3.5.1.slim.min.js"></script>
     <script src="./jQuery/jquery-3.5.1.min.js"></script>
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.min.css">
@@ -18,23 +18,21 @@
     <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: fixed" class="initial">
         <div style="position: relative;border:5px solid #2b2b2b;font-size: 48px;
         text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
-            <form action="/user/loginUser" method="post">
-                <div class="head">
-                    <span>账号登录</span>
-                </div>
-                <div class="info">
-                    <label style="font-size: 48px" for="username">用户名:</label>
-                    <input type="text" style="font-size: 48px" value="" id="username" name="username"
-                           required placeholder="用户名"><br>
-                    <label style="font-size: 48px" for="password">密&nbsp;&nbsp;码:</label>
-                    <input type="password" style="font-size: 48px" value="" id="password" name="password"
-                           required placeholder="密码">
-                </div>
-                <div class="submit">
-                    <input type="submit" class="ui-button" style="font-size: 48px" id="chooseTologin" value="登录">
-                </div>
-                <div class="tail">
-                    <a href="./createUser.html">注册</a>
+            <form action="/user/createUser" method="post">
+                <label style="font-size: 48px" for="nickname">昵&nbsp;&nbsp;称:</label>
+                <input type="text" style="font-size: 48px" value="" id="nickname" name="nickname"
+                       required placeholder="用户昵称"><br>
+                <label style="font-size: 48px" for="username">用户名:</label>
+                <input type="text" style="font-size: 48px" value="" id="username" name="username"
+                       required placeholder="用户名"><br>
+                <label for="password">密&nbsp;&nbsp;码:</label>
+                <input type="password" style="font-size: 48px" value="" id="password" name="password"
+                                                       required placeholder="密码"><br>
+                <label for="password_2">确&nbsp;&nbsp;认:</label>
+                <input type="password" style="font-size: 48px" value="" id="password_2" name="password_2"
+                                                       required placeholder="确认密码">
+                <div>
+                    <input type="submit" class="ui-button" style="font-size: 48px" id="chooseTocreate" value="注册">
                 </div>
             </form>
         </div>
@@ -47,7 +45,7 @@
     $(document).ready(function(){
         $(document).keydown(function(event){
             if(event.keyCode === 13){
-                document.getElementById("chooseTologin").click();
+                document.getElementById("chooseTocreate").click();
             }
         });
     });
