--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -3,8 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>图片分享-首页</title>
+    <script src="./jQuery/jquery-3.5.1.slim.min.js"></script>
+    <script src="./jQuery/jquery-3.5.1.min.js"></script>
+    <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.min.css">
+    <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.structure.min.css">
+    <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.theme.min.css">
+    <link rel = "stylesheet" href = "./css/content.css">
+    <script src="./jQueryUI-1.13.2/jquery-ui.min.js"></script>
 </head>
 <body>
-首页
+<div id="root" style="height: 100%;width: 100%;top: 0;left: 0;position: fixed" class="initial">
+    <div id="header" style="height: 6%;width: 99.6%;top: 0.2%;right: 0.2%;position: fixed" class="initial">
+        <input type="button" class="ui-button" style="height:100%;float: right;font-size: 36px" id="chooseTologgout" value="安全退出">
+    </div>
+    <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: fixed" class="initial">
+        <div style="position: relative;border:5px solid #2b2b2b;font-size: 48px;
+        text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
+
+        </div>
+    </div>
+    <div id="footer" style="height: 3.2%;width: 99.6%;bottom: 0.2%;right: 0.2%;position: fixed" class="initial">
+    </div>
+</div>
 </body>
+<script>
+    $(document).ready(function(){
+        $(document).on('click', '#chooseTologgout', function () {
+            $.ajax({
+                url: "user/logout",
+                type: "post",
+                data: {},
+                dataType: "json",
+                async: false,
+                success: function(data){
+                    alert("退出登录成功！");
+
+                },
+                error: function (error) {}
+            });
+            location.reload();
+        })
+    });
+</script>
 </html>
