修正不登陆可以访问index.html页。

--- a/src/main/resources/static/createUser.html
+++ b/src/main/resources/static/createUser.html
@@ -50,7 +50,7 @@
             }
         });
         $(document).on('click', '#back', function(){
-            location.href = "./index.html";
+            location.href = "./login.html";
         });
     });
 </script>
