--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>图片分享-登录</title>
+    <title>图片分享-首页</title>
     <script src="./jQuery/jquery-3.5.1.slim.min.js"></script>
     <script src="./jQuery/jquery-3.5.1.min.js"></script>
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.min.css">
@@ -14,29 +14,12 @@
 <body>
 <div id="root" style="height: 100%;width: 100%;top: 0;left: 0;position: fixed" class="initial">
     <div id="header" style="height: 6%;width: 99.6%;top: 0.2%;right: 0.2%;position: fixed" class="initial">
+        <input type="button" class="ui-button" style="float: right;font-size: 36px" id="login" value="登录">
     </div>
     <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: fixed" class="initial">
         <div style="position: relative;border:5px solid #2b2b2b;font-size: 48px;
         text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
-            <form action="/user/loginUser" method="post">
-                <div class="head">
-                    <span>账号登录</span>
-                </div>
-                <div class="info">
-                    <label style="font-size: 48px" for="username">用户名:</label>
-                    <input type="text" style="font-size: 48px" value="" id="username" name="username"
-                           required placeholder="用户名"><br>
-                    <label style="font-size: 48px" for="password">密&nbsp;&nbsp;码:</label>
-                    <input type="password" style="font-size: 48px" value="" id="password" name="password"
-                           required placeholder="密码">
-                </div>
-                <div class="submit">
-                    <input type="submit" class="ui-button" style="font-size: 48px" id="chooseTologin" value="登录">
-                </div>
-                <div class="tail">
-                    <a href="./createUser.html">注册</a>
-                </div>
-            </form>
+            首页(游客端//包含图片展示、登录按钮)
         </div>
     </div>
     <div id="footer" style="height: 3.2%;width: 99.6%;bottom: 0.2%;right: 0.2%;position: fixed" class="initial">
@@ -45,10 +28,8 @@
 </body>
 <script>
     $(document).ready(function(){
-        $(document).keydown(function(event){
-            if(event.keyCode === 13){
-                document.getElementById("chooseTologin").click();
-            }
+        $(document).on('click', '#login', function(event){
+            location.replace("login.html");
         });
     });
 </script>
