--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -31,6 +31,7 @@
                                                          required placeholder="密码">
                 </div>
                 <div class="submit">
+                    <input type="button" class="ui-button" style="font-size: 48px" id="chooseTohome" value="首页">
                     <input type="submit" class="ui-button" style="font-size: 48px" id="chooseTologin" value="登录">
                 </div>
                 <div class="tail">
@@ -49,6 +50,9 @@
             if(event.keyCode === 13){
                 document.getElementById("chooseTologin").click();
             }
+        });
+        $(document).on('click', '#chooseTohome', function(){
+            location.replace("index.html");
         });
     });
 </script>
