--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -73,6 +73,7 @@
             });
             localStorage.setItem("loginUser", result['loginUser']);
             localStorage.setItem("userid", result['userid']);
+            localStorage.setItem("status", result['status']);
             alert(result['msg']);
             location.href ='/home.html';
         });
